NOT COMMITTED YET (OR EXPERIMENTAL):
====================================

Emacs-mode:

Shell-script: 

LaTeX macros:

Installation/Documentation:

SINCE LAST RELEASE:
===================

Emacs-mode:

 - version 1.2.3
 * whizzy-toggle-debug not set whizzy-debug 
 * changed communication from whizzytex back to emacs.
 * added support for -pdf xpdf mode.
 * enter Emacs-debugger on fatal error when called in debug-mode.
 * change whizzy-sit-for for compatibility with Emacs on mac-os-10
 - version 1.2.0 
 * fixed ^ in middle of whizzy-mode-regexp-alist
 * test for the file associated to the buffer already exists.
 * small slices can be automatically enlarged to fit some number of pages
 * does not shrink log during initialization and save it at the end
 * changed names of configuration files whizzy.el 
 * fix a bug in parsing -dvicopy file-configuration. 
 * added whizzy-auto-recompile function to set corresponding variable.
 - version 1.1.3
 * overlays are now variables and can now be customized.
 * changed whizzy-edit API.
 * added -display option.

Shell-script: 

 - version 1.2.3
 * fix configure and checkconfig to allow -initex 'tex -ini'
 * changed communication from whizzytex back to emacs.
 * added support for -pdf xpdf mode.
 * write in .waux and read in .raux to be stable in face of errors
 - version 1.2.0 
 * diplay VERSION number with option -version and command info.
 * allow spaces in directory names (not in the filename itself).
 * changed names of configuration files whizzy.sh 
 * added a flag during initialization, so as to keep debugging information
 * added AUTOCOMPILE and AUTORECOMPILE variables.
 * removed obsolete DOMARKS.
 - version 1.1.3
 * added internal duplex mode if MULTIPLE files can be viewed altogether
 * added -display option 

LaTeX macros:

 - version 1.2.3
 * some changes to allow anchors with pdftex driver.
 * fixed the problem with the new hypertex package (\scrollmode). 