@@ -21,13 +21,13 @@
 
 \section {Where to find it}
 
-The URL is \url{http://pauillac.inria.fr/whizzytex}
+The URL is \url{http://cristal.inria.fr/whizzytex/}
 
 The last major release is {\release}
 and the stable version is {\version}
 
 The last version of the FAQ can be found at 
-\url{http://pauillac.inria.fr/whizzytex/FAQ.html}
+\url{http://cristal.inria.fr/whizzytex/FAQ.html}
 
 \hypertarget{isitabug}{}
 \section {Is this a Bug?}
@@ -56,7 +56,7 @@ In \texttt{advi} mode (when option \texttt{-advi} is used), the
 to latex your source with the package \texttt{advi} explicitly loaded before
 all other packages, since some errors may be indirectly due to this
 \texttt{advi} and not to {\WhizzyTeX} itself---then send your bug report
-to \href{http://pauillac.inria.fr/advi/}{Active-DVI}.
+to \href{http://cristal.inria.fr/advi/}{Active-DVI}.
 
 Also, do not forget to check your version number before repporting a bug. 
 See the value of variable \texttt{whizzytex-mode} in Emacs manually or
@@ -211,14 +211,13 @@ accordingly. See the README and INSTAL file coming with his
 \emph {coming with absolutely no warranty}. 
 
 See also the detailed
-\ahref {http://home.imf.au.dk/hellmund/whizzy.html}
-{installation guide} written by
+\ahref {http://hellmund.dk/whizzy.html}{installation guide} written by
 %\ahref {http://home.imf.au.dk/hellmund}
 {Gunnar Hellmund}.
 
 \section{Using Virtual Fonts with Active-DVI}
 
-\href{http://pauillac.inria.fr/advi/}{Active-DVI}
+\href{http://cristal.inria.fr/advi/}{Active-DVI}
 does not currently handle virtual fonts (when called with virtual fonts, it
 usually shows a more or less blank screen). This can be fixed by expanding
 virtual fonts with \texttt{dvicopy} prior to display as explained on the
