@@ -1,4 +1,4 @@
-%; whizzy  -dvi
+%; whizzy  -advi
 
 \documentclass{article}
 
