@@ -62,7 +62,7 @@ instrument some of the latex commands.
 
 \noindent
 \psset{boxsep=0pt,framesep=0pt}
-\weditcirclenode{x=6.4465,y=6.7011,w=7.6882}
+\weditcirclenode{x=6.0946,y=4.7659,w=6.5153}
   [boxsep=0pt,framesep=0pt,fillstyle=solid,fillcolor=cyan]{A}%
   {Left \\adjusted\\ circle}%
 \weditcirclenode*{x=24.4620,y=7.7952,w=2.4906}
@@ -77,17 +77,17 @@ instrument some of the latex commands.
 %%   {\hskip -\adviw\ovalnode[#2]{#3}{\hspace{2\adviw}}\hskip -\adviw
 %%    \hbox to 0em{\hss \begin{tabular}{c}#4\end{tabular}\hss}%
 %%   }}%
-\adviedit{x=16.9091,y=-2.9009,w=4.0624}
+\adviedit{x=16.9091,y=-2.9009,w=6.9359}
   {\hsize \adviw\vbox{aa kj lkj lkjkl ljk jjklj klj  
 \adviedit{x=7.6260,y=4.1626,w=4.7126}
   {\circlenode{A}{\hspace{\adviw}}}%
 aa a aj lkljk lj l lk }}%
 %
-\adviedit{x=5.8852,y=-3.5785,w=6.6930,h=2.2901,d=4.1668}
+\adviedit{x=5.8852,y=-3.5785,w=5.6961,h=4.5772,d=4.1668}
   {\hsize \adviw\vtop{aa kj lkj lkjkl ljk jjklj klj  aa a aj lkljk lj l lk
   }}%
 %
-\adviedit{x=23.7260,Y=-5.8014,w=9.5803,h=5.6856,d=7.1008}
+\adviedit{x=24.8987,Y=-5.8014,w=9.3456,h=2.9880,d=7.1008}
   {\hsize \adviw\vtop{\vskip -\advih\noindent 
   aa ljl j kjlkj ljl jk j kj  hkj lhj ha hjg hjgkgh jk
 su yy iaysuy lkj ljl jk jlk jkl jj}}%
@@ -117,19 +117,19 @@ with a bubble
 
 
 $$
-\adviedit{x=14.5131,y=1.0068}{\ovalnode{A}{A}}%
-\adviedit{x=2.6970,y=-9.4243}{\ovalnode{B}{B}}%
+\adviedit{x=14.5131,y=0.8895}{\ovalnode{A}{A}}%
+\adviedit{x=6.1570,y=-8.1928}{\ovalnode{B}{B}}%
 \adviedit{x=-5.6150,y=0.1397}{\ovalnode{C}{C}}%
 \adviedit{x=-9.4247,y=-7.4891}{\ovalnode{D}{D}}%
 \ncarc{A}{B}\Bput{\ovalnode{ab}{ab}}
-\ncarc{B}{C}\Bput{b\adviedit{w=3.0176}{\ovalnode{E}{\hspace{\adviw}E}}c}
+\ncarc{B}{C}\Bput{b\adviedit{w=1.9034}{\ovalnode{E}{\hspace{\adviw}E}}c}
 \ncarc{B}{D}
 \ncarc[linestyle=dotted]{E}{ab}\Aput{!}
 $$
 
 
 
-\adviedit{w=1.0043,h=1.0513,d=0.3946,unit=4em}
+\adviedit{w=1.4587,h=1.3152,d=0.3946,unit=4em}
 {\ifdim \adviw<\adviunit \else \advisetw{\the\adviunit}\fi
  \ifdim \advih<\adviunit \else \adviseth{\the\adviunit}\fi
  \ifdim \advid<\adviunit \else \advisetd{\the\adviunit}\fi
@@ -147,7 +147,7 @@ $$
 }%
 \adviedit{x=3.9626,y=7.5836,h=1.2277,w=6.5467}{\ov}%
 \adviedit{x=1.4389,y=-4.3766,h=3.1945,w=4.0175}{\ov}%
-\adviedit{x=-5.7482,y=-4.5960,h=2.8708,w=4.0985}{\ov
+\adviedit{x=-6.1000,y=-4.5374,h=2.7535,w=4.0984}{\ov
 \adviedit{x=-2.5889,y=-0.5650,h=0.6052,W=1}{\ov[0.2]}%
 \adviedit{x=-4.8548,y=-0.3222,h=0.6052,W=1}{\ov[0.2]}%
 \adviedit{x=-3.7219,y=-0.5649,h=0.6052,W=1}{\ov[0.2]}%
@@ -206,6 +206,50 @@ Chossing a color:
           {third}
 
 \vspace{5em}
+
+\section{Tabulars, minipages, etc.}
+
+\adviedit{w=7.4988}{%
+\begin{minipage}{\adviw}
+aaa ahjhk hjk
+\end{minipage}}
+
+AAA
+$$
+\adviedit{w=9.6446}{%
+\begin{tabular*}{\adviw}{l@{\extracolsep{\fill}}cr}
+aaa &  bbb & ccc\\
+\end{tabular*}}
+$$
+
+Bellow, the draw dimension is the external width of the tabular
+and not the column width...
+que l'on re`gle
+$$
+\adviedit{w=14.6107}{%
+\begin{tabular}{lp{\adviw}r}
+aaa &  bbb & ccc\\
+\end{tabular}}
+$$
+Unfortunately, the only kown nice fix is to use a command inside...
+
+$$
+%Define first line
+\newbox \bar 
+\setbox\bar =\hbox{\adviedit{w=7.0083}{%
+\begin{minipage}[t]{\adviw}
+aaa ahjhk hjk
+\end{minipage}}}
+\edef \foo{\the\wd\bar}
+\begin{tabular}{|l|p{\foo}|r|}
+\hline
+aaa &\unhbox\bar& ccc\\
+\hline
+aaa &  second line is inlined & ccc\\
+\hline
+\end{tabular}
+$$
+
 
 
 
